--- a/src/components/Newspaper.module.css
+++ b/src/components/Newspaper.module.css
@@ -123,7 +123,7 @@
 
 @media (max-width: 600px) {
     .pageContent {
-        padding: 20px;
+        padding: 30px 20px;
     }
 
     .cover h1 {
